--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
                 <div class="home-img">
-                    <img src="images/ma_photo.jpg" alt="ma photo">
+                    <img src="ma_photo.jpg" alt="ma photo">
                 </div>
         </section>
 
